[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-essentials-geoip"
version = "0.0.1"
dependencies = ["geoip2", "requests"]
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
]
description = "Shows the country or city of a user on login"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "essentials"]

[project.urls]
Homepage = "https://github.com/endstone-essentials/geoip"

[project.entry-points."endstone"]
essentials-geoip = "endstone_essentials.geoip:EssentialsGeoIP"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_essentials"]
